methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:23: error: expected class or object definition
def makeV(c: Color) {
^MethodsPicture:39: error: Unmatched closing brace '}' ignored here
}
^